# batch_bg_remover_pro

./: README.md  README_ko.md  config.json  pyproject.toml  uv run pyinstaller.txt
capcut/: batch_bg_remover_upgrade.m4a  batch_bg_remover_upgrade.srt
src/batch_bg_remover.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/batch_bg_remover_pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/bg_remover/: config.json  gui.py  main.py  processor.py  tracker.py  tracker_OLD.py
